--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zenboard-v3",
+  "name": "zenboard-v2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.540.0",
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "date-fns": "^3.4.0",
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.2.1",
+    "multiparty": "^4.2.3",
+    "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.0.1",
+    "react-sortablejs": "^6.1.4",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.1.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
